--- a/src/app/central-section/board/board.component.css
+++ b/src/app/central-section/board/board.component.css
@@ -72,6 +72,20 @@
   color: black;
 }
 
+.blue_stone {
+  width: 4.5%;
+  height: 4.5%;
+  background-image: radial-gradient(#0000ff, #0000e6, #0000ce, #0000d2);
+  box-shadow: 0 0 3px 1px blue;
+}
+
+.white_stone {
+  width: 4.6%;
+  height: 4.6%;
+  background-image: radial-gradient(white, #e6e6e6, #cecece, #d2d2d2);
+  box-shadow: 0 0 3px .5px black;
+}
+
 @media screen and (max-width: 960px) {
   .board_container {top: 50px; width: 100vw; height: 110vw;}
   .stones_container {position: relative; width: 100vw; height: 100vw;}
