--- a/src/app/central-section/central-section.component.css
+++ b/src/app/central-section/central-section.component.css
@@ -10,12 +10,13 @@
 
 .appearing_icon {
   animation-name: appearing_icon_animation;
-  animation-duration: 500ms;
+  animation-duration: 350ms;
 }
 
 
 @keyframes appearing_icon_animation {
   0% {opacity: 0; transform: scale(0, 0);}
+  20% {opacity: 0; transform: scale(0, 0);}
   85% {opacity: 1; transform: scale(1.3, 1.3);}
   100% {opacity: 1; transform: scale(1, 1);}
 }
