--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -1,10 +1,13 @@
 <div class="popup">
   <div style="height: 20px;"></div>
-  <h2>ATTEMPT {{attempt}}</h2>
+  <h2>ATTEMPT #{{attempt}}</h2>
+  <h2>HINTS USED: {{totalHintsRequested}}</h2>
   <div style="height: 20px;"></div>
   <div *ngFor="let score of scoreHistory; let i = index;">
-    <h2>{{getScoreText(score, i)}}</h2>
-    <div style="height: 20px;"></div>
+    <div *ngIf="(i+1+startingMoves) % showScoreFrequency === 0 || i === scoreHistory.length - 1">
+      <h2>{{getScoreText(score, i)}}</h2>
+      <div style="height: 20px;"></div>
+    </div>
   </div>
   <div *ngIf="scoreHistory.length > 0">
     <h2>{{getAverageScoreText()}}</h2>
