Enabled option of changing score frequency settings and saving via cookies.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,20 @@
       PAY {{getHintCost()}} FOR A HINT
     </button>
 
+
+    <hr>
+    <!-- Change score frequency showing. -->
+    <span class="dropdown_menu_item" style="text-align: center">
+      SHOW SCORE EVERY
+    </span>
+    <span class="dropdown_menu_item buttons_container">
+      <div [ngClass]="getReduceButtonClass(showScoreFrequency, minShowScoreFrequency)"
+           (click)="changeShowScoreFrequency(-1)">-</div>
+      {{hintSquareSize}} MOVES
+      <div [ngClass]="getIncreaseButtonClass(showScoreFrequency, maxShowScoreFrequency)"
+           (click)="changeShowScoreFrequency(1)">+</div>
+    </span>
+
   </div>
 </div>
 <!--</div>-->
