Added move streak information as well as the total number of correct guesses and a percentage of it.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,7 +72,9 @@
                      (showScore)="showScoreView()"
                      (autoPlayedMove)="updateMoveLoading($event)"
                      (updateScore)="updateScore($event)"
+                     (updateGuessHistory)="addGuess($event)"
                      (changeMove)="updateMoveNumber($event)"
+                     [streak]="getGuessStreak(guessHistory.length-1)"
                      [gameRun]="gameRun"
                      [autoPlay]="loadMoves"
                      [guessSquareSize]="guessSquareSize"
@@ -111,9 +113,11 @@
 <app-score *ngIf="scoreVisible"
            [lastMove]="game.lastMove"
            [scoreHistory]="scoreHistory"
+           [guessHistory]="getCumulativeCorrectGuesses()"
            [currentScore]="currentScore"
            [attempt]="gameRun"
            [game]="game"
+           [longestStreak]="getLongestStreak()"
            [gameIndex]="gameIndex"
            [totalHintsRequested]="totalHintsRequested"
            [showScoreFrequency]="showScoreFrequency"
