--- a/src/app/central-section/central-section.component.html
+++ b/src/app/central-section/central-section.component.html
@@ -6,6 +6,7 @@
                    [moveNumber]="moveNumber + 1"
                    [lastMove]="game.lastMove + 1"
                    [score]="score"
+                   [streak]="streak"
                    [isGameEnd]="maxMoveNumber >= (game.lastMove + 1)"
                    [gameResult]="game.result"
                    [isReviewing]="isReviewing()"
