--- a/src/app/central-section/move-info/move-info.component.css
+++ b/src/app/central-section/move-info/move-info.component.css
@@ -64,6 +64,32 @@
   cursor: pointer;
 }
 
+.streak {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  font-family: 'Catamaran', sans-serif;
+  font-size: 3vh;
+  font-weight: 600;
+  margin-left: 5px;
+}
+
+.bronze_streak {
+  color: #905921;
+}
+
+.silver_streak {
+  color: #A8A9AD;
+  animation-name: animation_streak_upgrade;
+  animation-duration: .3s;
+}
+
+.golden_streak {
+  color: #A57C00;
+  animation-name: animation_streak_upgrade;
+  animation-duration: .3s;
+}
+
 .number_of_moves {
   font-family: 'Barlow Condensed', sans-serif;
   font-size: 2.1vh;
@@ -97,4 +123,10 @@
 @keyframes animation_player_info_appears {
   0% {opacity: 0; top: 150%;}
   100% {opacity: 1; top: 50%;}
+}
+
+@keyframes animation_streak_upgrade {
+  0% {opacity: 0; font-size: 0; font-weight: 0}
+  80% {opacity: 1; font-size: 4vh; font-weight: 800;}
+  100% {opacity: 1; font-size: 3vh; font-weight: 600;}
 }
