--- a/src/app/score/score.component.css
+++ b/src/app/score/score.component.css
@@ -2,6 +2,20 @@
   all:unset;
 }
 
+.meta_container {
+  display: flex;
+  position: relative;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.score_container {
+  width: 100%;
+  align-content: center;
+  font-size: 21px;
+  color: #000;
+}
+
 button.gray_button {
   border: 1px solid #000000;
   background-color: gray;
