Fixed score not working if moves are skipped.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -114,6 +114,7 @@
            [lastMove]="game.lastMove"
            [scoreHistory]="scoreHistory"
            [guessHistory]="getCumulativeCorrectGuesses()"
+           [madeGuesses]="getMadeGuesses()"
            [currentScore]="currentScore"
            [attempt]="gameRun"
            [game]="game"
