--- a/src/styles.css
+++ b/src/styles.css
@@ -218,7 +218,7 @@ button.white_button {
   width: 4.4%;
   height: 4.4%;
   background-image: radial-gradient(#cccccc, #4d4d4d, #000000, #000000);
-  box-shadow: 0 0 2px 2px black;
+  box-shadow: 0 0 3px .5px gray;
 }
 
 .white_stone {
